# PRoWeeder

./: .gitignore  README.md  agriculture_vision_dataset.py  app.py  balanced_sampling.py  check_dataset.py  convertt.py  inspect_ft.py  pyproject.toml  report.py  run_all_tests.py  test_baseline_av.py  test_baseline_weedmap.py  test_finetuned_av.py  test_finetuned_weedmap.py  test_reproduced_av.py  test_reproduced_weedmap.py  train_agriculture_vision.py
.hf/: config.yaml
outputs/agriculture_vision_v2/tensorboard/: events.out.tfevents.1764010059.kats-laptop.10844.0  events.out.tfevents.1764010377.kats-laptop.7348.0  events.out.tfevents.1764010489.kats-laptop.13020.0
outputs/test_results/: COMPREHENSIVE_TESTING_REPORT.txt  phase1_finetuned_agriculture_results.json  phase1_finetuned_weedmap_results.json  reproduced_roweeder_agriculture_results.json  reproduced_roweeder_weedmap_results.json  roweeder_baseline_agriculture_results.json  roweeder_baseline_weedmap_results.json
parameters/finetuning/: agriculture_vision.yaml
roweeder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
roweeder/experiment/: run.py
roweeder/models/: hub.py
weedmap-inference/: README.md  app.py
weedmap-inference/utils/: __init__.py  inference.py  preprocessing.py  visualization.py
weedmap_inference/: app.py  requirements.txt
weedmap_inference/utils/: inference.py
